ebnf.txt
program      = { statement } ;
statement    = var_decl | assignment | print_stmt | if_stmt | while_stmt | break_stmt | continue_stmt | block ;
var_decl     = "var" identifier [ "=" logical_or ] ";" ;
assignment   = identifier "=" logical_or ";" ;
print_stmt   = "print" logical_or ";" ;
if_stmt      = "if" "(" logical_or ")" block [ "else" ( if_stmt | block ) ] ;
while_stmt   = "while" "(" logical_or ")" block ;
block        = "{" { statement } "}" ; 
break_stmt   = "break" ";" ;
continue_smt = "continue" ";" ;
logical_or   = logical_and { "||" logical_and } ;
logical_and  = comparison { "&&" comparison } ;
comparison   = additive { ("==" | "!=" | "<" | ">" | "<=" | ">=") additive } ;
additive     = term { ("+" | "-") term } ;
term         = factor { ("*" | "/") factor } ;
factor       = identifier | number | string | boolean | "(" logical_or ")" ;
boolean      = "true" | "false" ;
